--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,8 @@
 plugins {
     id 'com.github.johnrengelman.shadow' version '7.1.1'
+    id 'java'
+    id 'maven-publish'
 }
-
-apply plugin: 'java'
-apply plugin: 'maven-publish'
 
 group = 'com.github.Outspending'
 version = '0.0.1'
