--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,15 @@
 plugins {
     id 'com.github.johnrengelman.shadow' version '7.1.1'
-    id 'java'
-    id 'maven-publish'
 }
+
+apply plugin: 'java'
+apply plugin: 'maven-publish'
 
 group = 'com.github.Outspending'
 version = '0.0.1'
+
+sourceCompatibility = 17
+targetCompatibility = 17
 
 repositories {
     mavenCentral()
