Changed Some API Things

--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id 'com.github.johnrengelman.shadow' version '7.1.1'
+}
+
 apply plugin: 'java'
 apply plugin: 'maven-publish'
 
@@ -51,5 +55,11 @@ publishing {
             from components.java
         }
     }
+}
+
+shadowJar {
+    relocate 'fr.mrmicky.fastboard', 'me.outspending.invoice.fastboard'
+
+    destinationDirectory = file("D:\\MC Server\\plugins")
 }
 
